--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,38 @@
 </head>
 <body>
 
+<nav class="navbar navbar-inverse">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Page 1</a></li>
+        <li><a href="#">Page 2</a></li> 
+        <li><a href="#">Page 3</a></li> 
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">.col-md-8</div>
+
+
+
+    <div class="col-md-4">.col-md-4</div>
+  </div>  
+</div>
+
+
+
+<div class="container">
     <% if signed_in? %>
       Signed in as: <%= current_user.email %>
       <%= button_to 'Sign out', sign_out_path, method: :delete %>
@@ -21,8 +53,19 @@
         <div class="flash <%= key %>"><%= value %></div>
       <% end %>
     </div>
+</div>
+
+<div class="container">
+
+    <button type="button" class="btn btn-default btn-lg">Default</button>
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" class="btn btn-warning btn-xs"> Warning</button>
+    <button type="button" class="btn btn-danger glyphicon glyphicon-remove"> Danger</button>
+    <button type="button" class="btn btn-link">Link</button>
 
 <%= yield %>
-
+</div>
 </body>
 </html>
