--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,21 @@
         <li><a href="listings">Show listings</a></li> 
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <% if !signed_in? %>
         <li><a href="sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li><a href="sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <%else%>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> Welcome <%= current_user.name %> <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="sign_out">Sign Out</a></li>
+            </ul>
+          </li>
+        <%end%>
       </ul>
     </div>
   </div>
