listing complete CRUD

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -32,7 +32,8 @@
 		  <strong>Number of guests:</strong>
 		  <%= @listing.num_of_guest %>
 		</p>
-		<%= link_to 'Back', listings_path %>
+		<%= link_to 'Edit', edit_listing_path(@listing) %> | 
+		<%= link_to 'Back', listings_path %> |
 
 	</div> 	<!-- col-md-8 -->
 
