--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,35 @@
 </head>
 <body>
 
-<nav class="navbar navbar-custom navbar-static-top">
-  <div class="container">
+
+<nav class="navbar navbar-findcond navbar-fixed-top">
+    <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Airbnb</a>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Airbnb</a>
     </div>
-    <div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="listings/new">Become a host</a></li>
-        <li><a href="listings">Show listings</a></li> 
-      </ul>
+    <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
+        
+        <li class="active"><a href="#"># <span class="sr-only">(current)</span></a></li>
         <% if !signed_in? %>
         <li><a href="sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li><a href="sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         <%else%>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-bell-o"></i> Your listing <span class="badge">0</span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#"><i class="fa fa-fw fa-tag"></i> <span class="badge">Music</span> sayfası <span class="badge">Video</span> sayfasında etiketlendi</a></li>
+            <li><a href="#"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">Music</span> sayfasında iletiniz beğenildi</a></li>
+            <li><a href="#"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">Video</span> sayfasında iletiniz beğenildi</a></li>
+            <li><a href="#"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">Game</span> sayfasında iletiniz beğenildi</a></li>
+          </ul>
+        </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> Welcome <%= current_user.name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -31,18 +44,21 @@
               <li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="sign_out">Sign Out</a></li>
+              <li><%= button_to 'Sign out', sign_out_path, class: "btn btn-danger", method: :delete %></li>
             </ul>
           </li>
         <%end%>
       </ul>
+      <form class="navbar-form navbar-right search-form" role="search">
+        <input type="text" class="form-control" placeholder="Search" />
+      </form>
     </div>
   </div>
 </nav>
 
 
 
-
+<br><br><br>
 <div class="container">
     <% if signed_in? %>
       Signed in as: <%= current_user.email %>
@@ -58,6 +74,8 @@
       <% end %>
     </div>
 </div>
+
+
 
 <div class="container">
   <%= yield %>
