--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -50,7 +50,8 @@
     <%= f.text_area :body %>
   </p>  
   <p>
-    UPLOAD
+  <%= f.label :picture %>
+  <%= f.file_field :picture, accept: 'image/jpeg, image/jpg, image/gif, image/png' %>
   </p>
   <p>
     <%= f.submit %>
