--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -11,7 +11,8 @@
   </div>
 <%end%>
 
-<%= form_for @listing  do |f| %> 
+<%= form_for @listing do |f| %> 
+  <!-- html: {multipart: true}  -->
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
