--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,7 +4,7 @@
 
 		<h1>Listing: <%= @listing.name %></h1>
 
-		<%= image_tag @listing.picture.url if @listing.picture? %>
+		<%= image_tag @listing.picture[0].url if @listing.picture? %>
 
 		<p>
 		  <strong>Name:</strong>
@@ -49,7 +49,7 @@
 		</p>
 		<p>
 		  <strong>Description:</strong>
-		  <%= @user.name %>
+		  <%= @user.first_name %>
 		</p>
 		<p>
 		  <strong>Start Date:</strong>
