--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Airbnb</a>
+      <a class="navbar-brand" href="/">Airbnb</a>
     </div>
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
@@ -29,7 +29,8 @@
         <li><a href="sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         <%else%>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-bell-o"></i> Your listing <span class="badge">0</span></a>
+        <%if current_user.listings.any?%>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-bell-o"></i> Your listing <span class="badge"><%=current_user.listings.count%></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#"><i class="fa fa-fw fa-tag"></i> <span class="badge">Music</span> sayfası <span class="badge">Video</span> sayfasında etiketlendi</a></li>
             <li><a href="#"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">Music</span> sayfasında iletiniz beğenildi</a></li>
@@ -37,12 +38,14 @@
             <li><a href="#"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">Game</span> sayfasında iletiniz beğenildi</a></li>
           </ul>
         </li>
+        <%else%>
+          <li><a href="/listings/new">Become host</a></li>
+        <%end%>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> Welcome <%= current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
+              <li><a href="/users/<%=current_user.id%>">View Profile</a></li>
+              <li><a href="/users/<%=current_user.id%>/edit">Edit Profile</a></li>
               <li role="separator" class="divider"></li>
               <li><%= button_to 'Sign out', sign_out_path, class: "btn btn-danger", method: :delete %></li>
             </ul>
