--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -34,8 +34,12 @@
 		  <strong>Number of guests:</strong>
 		  <%= @listing.num_of_guest %>
 		</p>
+
+		<%= link_to 'Book NOW', new_listing_booking_path(@listing) %>
+		<br>
+
 		<%= link_to 'Edit', edit_listing_path(@listing) %> | 
-		<%= link_to 'Back', listings_path %> |
+		<%= link_to 'Back', listings_path %> 
 
 	</div> 	<!-- col-md-8 -->
 
