Address plugin in listings

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -7,3 +7,6 @@
 <%= link_to 'Delete', listing_path(@listing),
           method: :delete,
           data: { confirm: 'Are you sure?' } %>
+
+ 
+<%= render 'address' %> 
