--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,15 @@
         <%if current_user.listings.any?%>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-bell-o"></i> Your listing <span class="badge"><%=current_user.listings.count%></span></a>
           <ul class="dropdown-menu" role="menu">
+
+
+
             <li><a href="#"><i class="fa fa-fw fa-tag"></i> <span class="badge">Music</span> sayfası <span class="badge">Video</span> sayfasında etiketlendi</a></li>
             <li><a href="#"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">Music</span> sayfasında iletiniz beğenildi</a></li>
             <li><a href="#"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">Video</span> sayfasında iletiniz beğenildi</a></li>
             <li><a href="#"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">Game</span> sayfasında iletiniz beğenildi</a></li>
+            <hr>
+            <li><a href="/listings/new"><i class="fa fa-fw fa-thumbs-o-up"></i> <span class="badge">New</span>Create New Listing</a></li>
           </ul>
         </li>
         <%else%>
@@ -59,10 +64,12 @@
   </div>
 </nav>
 
-
-
-<br><br><br>
 <div class="container">
+<br><br><br>
+  <%= yield %>
+
+
+  <div class="container">
     <% if signed_in? %>
       Signed in as: <%= current_user.email %>
       <%= button_to 'Sign out', sign_out_path, method: :delete %>
@@ -78,10 +85,6 @@
     </div>
 </div>
 
-
-
-<div class="container">
-  <%= yield %>
 </div>
 </body>
 </html>
