--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <li class="active"><a href="#"># <span class="sr-only">(current)</span></a></li>
         <% if !signed_in? %>
         <li><a href="sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <%= render 'sessions/navlogin'%>
         <%else%>
         <li class="dropdown">
         <%if current_user.listings.any?%>
@@ -66,6 +66,44 @@
 
 <div class="container">
 <br><br><br>
+
+
+
+
+
+<div>
+
+  <!-- Nav tabs -->
+<!--   <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+  </ul> -->
+
+  <!-- Tab panes -->
+<!--   <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="home">...</div>
+    <div role="tabpanel" class="tab-pane" id="profile">...</div>
+    <div role="tabpanel" class="tab-pane" id="messages">...</div>
+    <div role="tabpanel" class="tab-pane" id="settings">...</div>
+  </div>
+
+</div> -->
+
+
+<!-- Button trigger modal -->
+
+<%=render 'users/new'%>
+
+<!-- 
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#Login-pop">
+    Launch Normal Form
+</button>
+ -->
+<!-- Modal -->
+
+
   <%= yield %>
 
 
