--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,8 @@
 
 
 <%= form_for [@listing, @booking] do |f| %>  
+  <%= f.hidden_field :listing_id, value: @listing.id %>
+
   <p>
     <%= f.label :check_in %><br>
     <%= f.date_field :check_in %>
