--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,12 +6,14 @@
 		<div class="col-md-7">
 
 		<br>
-		<%= image_tag @listing.picture[0].main.url if @listing.picture? %>
+		<%= image_tag @listing.picture[0].main.url, class: "img-responsive" if @listing.picture? %>
+
 		<br><br>
 		<%= image_tag @listing.picture[1].thumb.url if @listing.picture? %>
 		</div> 	<!-- col-md-3 -->
 
 		<div class="col-md-5">
+			<div class="jumbotron"
 			<h1><strong> <%= @listing.name%></strong></h1>
 			<% @listing.tags.any? %>
 			<% @listing.tags.each do |tag| %>
@@ -31,6 +33,7 @@
 
 
 			<%= link_to 'Edit', edit_listing_path(@listing) %>
+			</div>
 		</div> <!-- col-md-6 -->
 
     </div>	
