--- a/app/views/reservation_mailer/booking_email.html.erb
+++ b/app/views/reservation_mailer/booking_email.html.erb
@@ -20,12 +20,10 @@
             <table class="btn-primary" cellpadding="0" cellspacing="0" border="0">
               <tr>
                 <td>
-                  <a href="http://localhost:3000/users/<%=@listing.user_id%>"><strong>Manage your booking</strong>.</a>
+                  <a href="http://localhost:3000/users/<%=@listing.user_id%>"><strong>Manage your booking</strong></a>
                 </td>
               </tr>
             </table>
-
-				
 		</p>
 		<p>
 		If you have any questions, please do not hesitate to contact us or the user directly on email <%=@customer.email%> or phone <%=@customer.phone%>. 
