--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,51 @@
+<%= render 'slider' %>
+<div class="container">
+
+
+          <div id="custom-search-input">
+              <div class="input-group col-md-6 col-centered">
+                  <input type="text" class="  search-query form-control" placeholder="Search" />
+                  <span class="input-group-btn col-centered">
+                      <button class="btn btn-danger" type="button">
+                          <span class=" glyphicon glyphicon-search"></span>
+                      </button>
+                  </span>
+              </div>
+          </div>
+
+<div class="container marketing">
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-md-4 col-centered">
+          <img class="img-circle" src="/img/main_page/1.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-md-4 col-centered">
+          <img class="img-circle" src="/img/main_page/2.jpeg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Heading</h2>
+          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-md-4 col-centered">
+          <img class="img-circle" src="/img/main_page/3.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+</div>
+
+
+
+
+
+<div class="page-header">
+        <h1>Sticky footer with fixed navbar</h1>
+      </div>
+
+
 <div class="jumbotron">
         <h1>Slider for Bootstrap <small>bootstrap-slider.js</small></h1>
         <p class="lead">Examples for the <a target="_blank" href="https://github.com/seiyria/bootstrap-slider">bootstrap-slider</a> component.</p><p>
@@ -5,3 +53,7 @@
 
 
 
+
+<p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body &gt; .container</code>.</p>
+
+</div>
