--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -3,3 +3,5 @@
 <%= render 'form' %>
  
 <%= link_to 'Back', listings_path %>
+
+<script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script>
