--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -1,26 +1,69 @@
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class=""></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-      <div class="item">
-        <img data-src="holder.js/1140x500/auto/#777:#555/text:First slide" alt="First slide [1140x500]" src="/img/slider/1.jpg" data-holder-rendered="true">
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+        <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="/img/slider1/1.jpg" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <div id="style-back">
+              <h1>DISCOVER places you WISH to KNOW.</h1>
+                <p>Don't miss the opportunity, GO! Never is too late. With us, it is easier than ever to discover places you've always wanted to know.</p>
+              </div> 
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> 
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="/img/slider1/2.jpg" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <div id="style-back">
+                <h1>Spend TIME with PEOPLE you LOVE.</h1>
+                <p>Take your best friends and create a memories you'll never forget.</p>
+              </div>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Check it out :)</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="/img/slider1/3.jpg" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <div id="style-back">
+                <h1>LEARN &amp; EXPLORE different CULTURES.</h1>
+                <p>Explore and learn from different culture - discover their habits and life. Growth, growth, growth!</p>
+              </div>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">What places to visit?</a></p>
+            </div>
+          </div>
+        </div>        
+        <div class="item">
+          <img class="fourth-slide" src="/img/slider1/4.jpg" alt="Fourth slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <div id="style-back">
+                <h1>And FEEL like HOME.</h1>
+                <p>With us, you will be always safe - anywhere, anytime. With our GUARANTEE 100% satisfaction you have nothing to lose. </p>
+              </div>  
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Book Home Now</a></p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="item active">
-        <img data-src="holder.js/1140x500/auto/#666:#444/text:Second slide" alt="Second slide [1140x500]" src="img/slider/2.jpg" data-holder-rendered="true">
-      </div>
-      <div class="item">
-        <img data-src="holder.js/1140x500/auto/#555:#333/text:Third slide" alt="Third slide [1140x500]" src="img/slider/3.jpg" data-holder-rendered="true">
-      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+
+    
