--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,11 +75,19 @@ nav.navbar-findcond span.badge.new { background: rgba(255, 0, 0, 0.8); color: #f
 }
 .btn-fb{
     color: #fff;
-    background-color:#3b5998;
+    background-color:#354c8c;
+    width: 50%;
+    height: auto; 
 }
+
+.aaaaaaa{
+    width: 100%;
+    height: auto; 
+}
+
 .btn-fb:hover{
     color: #fff;
-    background-color:#496ebc 
+    background-color:#354c8c 
 }
 .btn-tw{
     color: #fff;
@@ -108,7 +116,13 @@ nav.navbar-findcond span.badge.new { background: rgba(255, 0, 0, 0.8); color: #f
   text-align: center;
 }
 
+.booking-red {
+  border: 2px;
+  padding: 20px;
+  border-color: #ccc; 
+  box-shadow: 0 0 2px 0 #ccc;
 
+}
 
 
 /* CUSTOMIZE THE CAROUSEL
