Address auto-complete in listing

--- a/app/views/listings/_address.html.erb
+++ b/app/views/listings/_address.html.erb
@@ -34,12 +34,12 @@
   </p>    
 
   <p>
-    <%= f.label :State %><br>
+    <%= f.label :state %><br>
     <%= f.text_field :address_state %>
   </p>    
 
    <p>
-    <%= f.label :Country %><br>
+    <%= f.label :country %><br>
     <%= f.text_field :address_country %>
   </p>    
 
