--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,7 +81,8 @@ nav.navbar-findcond span.badge.new { background: rgba(255, 0, 0, 0.8); color: #f
 }
 
 .aaaaaaa{
-    width: 100%;
+    width: 80%;
+    display: block;
     height: auto; 
 }
 
@@ -156,7 +157,8 @@ nav.navbar-findcond span.badge.new { background: rgba(255, 0, 0, 0.8); color: #f
   height: 500px;
 }
 
-
-
+#scroll-with-me {
+  position: fixed;
+}
 
 
