--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -15,7 +15,7 @@
               <h1>DISCOVER places you WISH to KNOW.</h1>
                 <p>Don't miss the opportunity, GO! Never is too late. With us, it is easier than ever to discover places you've always wanted to know.</p>
               </div> 
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> 
+              <p><a class="btn btn-lg btn-danger" href="#" role="button">Sign up today</a></p> 
             </div>
           </div>
         </div>
@@ -27,7 +27,7 @@
                 <h1>Spend TIME with PEOPLE you LOVE.</h1>
                 <p>Take your best friends and create a memories you'll never forget.</p>
               </div>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Check it out :)</a></p>
+              <p><a class="btn btn-lg btn-danger" href="#" role="button">Check it out :)</a></p>
             </div>
           </div>
         </div>
@@ -39,7 +39,7 @@
                 <h1>LEARN &amp; EXPLORE different CULTURES.</h1>
                 <p>Explore and learn from different culture - discover their habits and life. Growth, growth, growth!</p>
               </div>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">What places to visit?</a></p>
+              <p><a class="btn btn-lg btn-danger" href="#" role="button">What places to visit?</a></p>
             </div>
           </div>
         </div>        
@@ -51,7 +51,7 @@
                 <h1>And FEEL like HOME.</h1>
                 <p>With us, you will be always safe - anywhere, anytime. With our GUARANTEE 100% satisfaction you have nothing to lose. </p>
               </div>  
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Book Home Now</a></p>
+              <p><a class="btn btn-lg btn-danger" href="#" role="button">Book Home Now</a></p>
             </div>
           </div>
         </div>
@@ -64,6 +64,4 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
-
-    
+  </div>
