--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,26 @@
 <%= render 'slider' %>
 <div class="container">
 
+<center>
 
+<h1 class="h1-top-margin">It is time to start living. <small>there is no perfect timing</small></h1>
+<br>
           <div id="custom-search-input">
-              <div class="input-group col-md-6 col-centered">
-                  <input type="text" class="  search-query form-control" placeholder="Search" />
+              <div class="input-group col-md-8 col-centered">
+                  <input type="text" class="search-query form-control search-big" placeholder="Search places you'd love to visit" />
                   <span class="input-group-btn col-centered">
-                      <button class="btn btn-danger" type="button">
+                      <button class="btn btn-danger btn-lg" type="button">
                           <span class=" glyphicon glyphicon-search"></span>
                       </button>
                   </span>
               </div>
           </div>
+<br><br><br><br>
 
-<h1>It is time to start living. <small>there is no perfect timing</small>. DO</h1>
+<div class="clearfix"></div>
+
+</center>
+
 
   <div class="row">
     <div class="col-lg-2 col-sm-3 col-xs-4">
@@ -74,11 +81,13 @@
   
   
 
-
-
 <hr>
 
-
+<center>
 <p class="lead">Don't worry, be happy. With our <code>GUARANTEE</code> program you have nothing to lose. <code>Travel, enjoy, learn and live</code> anywhere and anytime in the whole World. Find your place <code>now</code>.</p>
+<p>TESTIMONIALS HERE</p>
+</center>
+
+
 
 </div>
