--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -5,7 +5,7 @@
 	<div class="col-md-8">
 
 
-		<h1><%=@listing.name%>, <small><%=@listing.address_city%> <%=@listing.address_state%></small></h1>
+		<h1><%=@listing.name%>, <small><%=@listing.address_city%>, <%=@listing.address_state%></small></h1>
 
 		<%= image_tag @listing.picture[0].main.url, class: "img-responsive" if @listing.picture? %>
 
@@ -63,4 +63,32 @@
 
 
 
-</div>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+      }
+    </style>
+
+    <div id="map"></div>
+    <script>
+
+var map;
+function initMap() {
+  map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: -34.397, lng: 150.644},
+    zoom: 8
+  });
+}
+
+    </script>
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-DyA8fXxHsxqJ4zg7rxM3NFQKI2lFPdI	
+&callback=initMap"
+        async defer></script>
+
