--- a/app/views/reservation_mailer/booking_email.html.erb
+++ b/app/views/reservation_mailer/booking_email.html.erb
@@ -20,7 +20,7 @@
             <table class="btn-primary" cellpadding="0" cellspacing="0" border="0">
               <tr>
                 <td>
-                  <a href="http://localhost:3000/users/<%=@listing.user_id%>"><strong>Manage your booking</strong></a>
+                  <a href="/users/<%=@listing.user_id%>"><strong>Manage your booking</strong></a>
                 </td>
               </tr>
             </table>
