--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -5,6 +5,7 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1" class=""></li>
         <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+        <li data-target="#myCarousel" data-slide-to="3" class=""></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
@@ -27,7 +28,7 @@
                 <h1>Spend TIME with PEOPLE you LOVE.</h1>
                 <p>Take your best friends and create a memories you'll never forget.</p>
               </div>
-              <p><a class="btn btn-lg btn-danger" href="#" role="button">Check it out :)</a></p>
+              <p><a class="btn btn-lg btn-danger" href="#places" role="button">Check it out :)</a></p>
             </div>
           </div>
         </div>
@@ -39,7 +40,7 @@
                 <h1>LEARN &amp; EXPLORE different CULTURES.</h1>
                 <p>Explore and learn from different culture - discover their habits and life. Growth, growth, growth!</p>
               </div>
-              <p><a class="btn btn-lg btn-danger" href="#" role="button">What places to visit?</a></p>
+              <p><a class="btn btn-lg btn-danger" href="#places" role="button">What places to visit?</a></p>
             </div>
           </div>
         </div>        
@@ -51,7 +52,7 @@
                 <h1>And FEEL like HOME.</h1>
                 <p>With us, you will be always safe - anywhere, anytime. With our GUARANTEE 100% satisfaction you have nothing to lose. </p>
               </div>  
-              <p><a class="btn btn-lg btn-danger" href="#" role="button">Book Home Now</a></p>
+              <p><a class="btn btn-lg btn-danger" href="#places" role="button">Book Home Now</a></p>
             </div>
           </div>
         </div>
