--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,24 +5,25 @@
 
 <h1 class="h1-top-margin">It is time to start living. <small>there is no perfect timing</small></h1>
 <br>
-          <div id="custom-search-input">
-              <div class="input-group col-md-8 col-centered">
-                  <input type="text" class="search-query form-control search-big" placeholder="Search places you'd love to visit" />
-                  <span class="input-group-btn col-centered">
-                      <button class="btn btn-danger btn-lg" type="button">
-                          <span class=" glyphicon glyphicon-search"></span>
-                      </button>
-                  </span>
-              </div>
-          </div>
+<div id="custom-search-input">
+	<%= form_tag listings_path, method: :get do %>
+	  <div class="input-group col-md-8 col-centered">
+					<%= text_field_tag :search, params[:search], placeholder: "Search places you'd love to visit", class: 'search-query form-control search-big' %>
+					<span class="input-group-btn col-centered">
+							<%= button_tag type: 'button', class: 'btn btn-danger btn-lg' do %>
+							<span class=" glyphicon glyphicon-search"></span>
+						<%end%>
+					</span>
+		</div>
+	<%end%>	
+</div>	
 <br><br><br><br>
+
 
 <div class="clearfix"></div>
 
-</center>
 
-
-  <div class="row">
+  <div class="row" id="places">
     <div class="col-lg-2 col-sm-3 col-xs-4">
         <a href="#">
              <img src="img/gallery/1.png" class="thumbnail img-responsive">
@@ -80,7 +81,7 @@
   </div>
   
 
-
+</center>
   
 
 <hr>
