--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,65 +1,81 @@
-<%= form_for @listing, html: {multipart: true} do |f| %> 
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
- 
-  <p>
-    <%= f.label :start %><br>
-    <%= f.date_field :start %>
-  </p>
+<div class="container">
+  <div class="row">
+  <h1>Create Listing</h1>
+    <div class="col-md-12" id="contact">
+        <%= form_for @listing, html: {multipart: true} do |f| %> 
+            <p>
+              <%= f.label :name_of_your_place %>: 
+              <%= f.text_field :name %>
+            </p>
+            
+            <%= f.label :avaibility %>
+            <p>
+              <%= f.date_field :start %>
 
-  <p>
-    <%= f.label :end %><br>
-    <%= f.date_field :end %>
-  </p> 
+              <%= f.date_field :end, placeholder: "From" %>
+            </p>
+            <div class="bfh-selectbox">
+              <%= f.label :price %>: 
+              <%= f.number_field :price %>
+            </p>     
 
-  <p>
-    <%= f.label :price %><br>
-    <%= f.number_field :price %>
-  </p>     
+            
+              <%= f.label :number_of_guests %>: 
+          <%= select(:listing, :num_of_guest, [[1], [2], [3], [4], [5], [6], [7], [8]]) %>
+            </div>
 
-  <p>
-    <%= f.label :number_of_guests %><br>
-<%= select(:listing, :num_of_guest, [[1], [2], [3], [4], [5], [6], [7], [8]]) %>
-  </p>  
-  <p>
-    <%= f.label :room_type %><br>
-	<%= radio_button "listing" ,:room_type, "Entire home" %>
-	<%= label_tag(:room_home, "Entire Home") %> &nbsp; | 
-	<%= radio_button "listing", :room_type, "Private room" %>
-	<%= label_tag(:room_private, "Private room") %> &nbsp; | 
-	<%= radio_button "listing", :room_type, "Shared room" %>
-	<%= label_tag(:room_shared, "Shared room") %> &nbsp;
-  </p>  
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_area :body %>
-  </p>  
-  <p>
-  <%= f.label :picture %>
-  <%= f.file_field :picture, multiple: true, accept: 'image/jpeg, image/jpg, image/gif, image/png' %>
-  </p>
 
-  <p>
-  <%= f.label :tags %>
-  <%= f.text_field :tag_list %>
-  </p>
-  <%= f.label :address %>
-    <div class="jt-address-autocomplete">
-      <!-- This field is used to search the address on Google Maps -->
-      <%= f.text_field :address, class: 'jt-address-search' %>
+            <p>
+              <div class="btn-group" data-toggle="buttons">
+                <%= f.label :room_type %><br>
+              <%= label_tag(:room_home, "Entire Home", class: "btn btn-default inactive btn-sm", autocomplete: "off") do %> 
+              <%= radio_button "listing" ,:room_type, "Entire home"%>
+              Entire Home
+              <%end%>
+              <%= label_tag(:room_private, "Private room", class: "btn btn-default inactive btn-sm") do %> 
+              <%= radio_button "listing", :room_type, "Private room" %>
+              Private Home
+              <%end%>
+              <%= label_tag(:room_shared, "Shared room", class: "btn btn-default inactive btn-sm") do %> 
+              Shared Room
+              <%= radio_button "listing", :room_type, "Shared room"%>
+              <%end%>
+              </div>
+            </p>  
+            <p>
+                <%= f.label :description %><br>
+                <%= f.text_area :body, class: "form_control", rows: 3, placeholder: "Tell us something about you & your place." %>
+            </p>  
+            <p>
+              <%= f.label :pictures %>: 
+              <%= f.file_field :picture, type: "button", class: "btn btn-default btn-sm", value: "Choose photos", multiple: true, accept: 'image/jpeg, image/jpg, image/gif, image/png' %>
+            </p>
 
-      <!-- All fields are hidden because the javascript will set their value automatically -->
-      <% for attr in JT::Rails::Address.fields %>
-          <%= f.hidden_field "address_#{attr}", class: "jt-address-field-#{attr}" %>
-      <% end %>
+            <p>
+              <%= f.label :tags %>: 
+              <%= f.text_field :tag_list, placeholder: "Separate by commas" %>
+            </p>
+            
+              <div class="jt-address-autocomplete">
+                <%= f.label :address %>: 
+                <!-- This field is used to search the address on Google Maps -->
+                <%= f.text_field :address, class: 'jt-address-search' %>
+
+                <!-- All fields are hidden because the javascript will set their value automatically -->
+                <% for attr in JT::Rails::Address.fields %>
+                    <%= f.hidden_field "address_#{attr}", class: "jt-address-field-#{attr}" %>
+                <% end %>
+              </div>
+              <br>
+            <p>
+              <%= f.submit type: 'button', class: "btn btn-danger" %>
+            </p>
+         
+        <% end %>
     </div>
+  </div>
+</div>
 
-  <p>
-    <%= f.submit %>
-  </p>
- 
-<% end %>
+
 
 <script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script>
